# py-bookify

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
bookify/: __init__.py  commands.py  db.py  download.py  exceptions.py  logger.py
bookify/article/: custom_types.py  exceptions.py  models.py
bookify/commands/: __init__.py  validators.py
bookify/parse/: __init__.py  custom_types.py  exceptions.py  helpers.py  websites.py
